# Ghost-Link

./: .gitignore  Cargo.toml  LOGBOOK.md  main.go  tsconfig.json  vitals
Python-Backend/ghost-link-core/: engine.py  main.py  watcher.py
Vanilla-Frontend/static-terminal/: app.js  index.html  style.css
scripts/archive/: ghost-env.sh
scripts/ops/: ghost-toggle.sh
src/: main.rs
src/static/: index.html  style.css
src/static/ts/: app.ts
