[package]
name = "vitals_bridge"
version = "1.0.0"
edition = "2024"

[dependencies]
# The web framework and async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors","fs"] }

# System monitoring (your existing crate)
sysinfo = "0.37.2"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"